# 250225group

./: Makefile  README.md  conftest.py  home_models.py  homework_5.py  homework_correcting_mistakes.py  info.py  my_dream.txt  pyproject.toml
.github/workflows/: test-study.yaml
tests/: home_test.py
